<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <name>enterprise-modulepath-tests</name>
    <artifactId>enterprise-modulepath-tests</artifactId>
    <description>Hazelcast Enterprise modulepath tests</description>
    <packaging>jar</packaging>

    <parent>
        <groupId>com.hazelcast</groupId>
        <artifactId>hazelcast-enterprise-root</artifactId>
        <version>4.1-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>9</maven.compiler.source>
        <maven.compiler.target>9</maven.compiler.target>

        <!-- needed for CheckStyle -->
        <main.basedir>${project.parent.basedir}</main.basedir>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration combine.self="override">
                    <release>9</release>
                </configuration>
            </plugin>

            <!-- Disable spotbugs as we have nothing to analyze yet (which makes the plugin unhappy). -->
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>${maven.spotbugs.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>none</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration combine.self="override">
                    <!-- 
                    Hot Restart related arguments:
                        export java.base/jdk.internal.ref
                        open java.base/java.nio
                        open java.base/sun.nio.ch
                    Operating system metrics related:
                        open jdk.management/com.sun.management.internal

                    Avoid warnings caused by reflection in
                    FilteringClassLoader:
                        open java.base/java.lang
                    TimedMemberStateFactoryHelper:
                        open java.management/sun.management
                     -->
                    <argLine>
                        ${vmHeapSettings}
                        ${extraVmArgs}
                        -ea
                        --add-exports java.base/jdk.internal.ref=com.hazelcast.core
                        --add-opens java.base/java.nio=com.hazelcast.core
                        --add-opens java.base/sun.nio.ch=com.hazelcast.core
                        --add-opens java.base/java.lang=com.hazelcast.core
                        --add-opens jdk.management/com.sun.management.internal=com.hazelcast.core
                        --add-opens java.management/sun.management=com.hazelcast.core
                        --illegal-access=warn
                        -Dhazelcast.hidensity.check.freememory=false
                        -Dhazelcast.phone.home.enabled=false
                        -Dhazelcast.logging.type=log4j2
                        -Dlog4j.skipJansi=true
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.hazelcast</groupId>
            <artifactId>hazelcast-enterprise</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>javax.cache</groupId>
            <artifactId>cache-api</artifactId>
            <version>${jsr107.api.version}</version>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
